@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2025-07-11T00:57:51Z",
+  "timestamp" : "2025-07-12T00:59:09Z",
   "count_outdated" : 1341,
   "uniques_outdated" : 863,
-  "count" : 1354,
-  "uniques" : 876,
+  "count" : 1355,
+  "uniques" : 877,
   "clones" : [
     {
       "timestamp": "2025-06-29T00:00:00Z",
@@ -97,6 +97,15 @@
     },
     {
       "timestamp": "2025-07-10T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2025-07-11T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
